# XRF2D

./: README.md  pyproject.toml  requirements.txt
wdxrf/: main.py
wdxrf/Layout/: create_button.py  layouts_style.py  main_window_att.py  setting_windows.py
wdxrf/Plot/: frame_attributes.py  plot_functions.py  plot_style.py  utils.py
wdxrf/Processing/: calcul.py  function_common.py  xrf.py
