[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "XRF2D"
version = "1.0.0"
authors = [
  { name="Thibaut Meyer", email="thibaut.meyer3@gmail.com" },
]
description = "Package for WDXRF visualization"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "SEM",
    "WDXRF",
    "MoS2",
    "2D",
]
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "Pillow==11.2.1",
    "PyQt5==5.15.11",
    "PyQt5_sip==12.17.0",
    "scipy==1.15.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE*"]

[project.gui-scripts]
XRF2D = "wdxrf.main:main"

[project.urls]
Homepage = "https://github.com/thi-mey/XRF2D"